--- a/index.html
+++ b/index.html
@@ -101,19 +101,20 @@
 
         <a href="#" class="logo">
           <!-- <img src="./assets/images/logo.svg" width="216" height="80" alt="keofi home" class="w-100"> -->
-          <p>GOLDEN ROSE</p>
+          <img src="./assets/images/logo.png" width="96" alt="LOGO">
         </a>
+
 
         <nav class="navbar" data-navbar>
 
           <ul class="navbar-list">
 
             <li>
-              <a href="#home" class="navbar-link" data-nav-link>Home</a>
+              <a href="#home" class="navbar-link" data-nav-link>inicio</a>
             </li>
 
             <li>
-              <a href="#about" class="navbar-link" data-nav-link>About</a>
+              <a href="#about" class="navbar-link" data-nav-link>Nosotros</a>
             </li>
 
             <li>
@@ -194,8 +195,8 @@
 
             <h2 class="h2 section-title reveal-left" data-reveal>Que Es El Voluntariado</h2>
 
-            <p style="color: black;" class="section-text reveal-left" data-reveal>
-              El voluntariado es una práctica en la que las personas donan de forma altruista su tiempo y esfuerzos para contribuir a una causa o comunidad sin recibir una compensación económica. Participar en trabajo voluntario no solo beneficia a la sociedad, sino que también brinda a los voluntarios oportunidades de aprendizaje, desarrollo de habilidades y conexión social. Conciencia Comprender el medio ambiente y los problemas que enfrenta la sociedad le ayudará a afrontar diversas situaciones. Como voluntario debes ser consciente de esto, no juzgar, ponerte en el lugar de los demás y entender su punto de vista, esto será saludable para ti y podrás adquirir una percepción diferente.
+            <p style="color: rgb(114, 0, 0);" class="section-text reveal-left" data-reveal>
+              Nuestra misión es reunir a bomberos y voluntarios para ofrecer ayuda y apoyo en situaciones de emergencia, promoviendo la solidaridad en nuestra comunidad.
             </p>
 
           
